infra/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster
  labels:
    name: togglemaster
