infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: togglemaster
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8001
      - path: /flag(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: flag-service
            port:
              number: 8002
      - path: /target(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: target-service
            port:
              number: 8003
      - path: /evaluation(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: evaluation-service
            port:
              number: 8004
      - path: /analytics(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: analytics-service
            port:
              number: 8005
